<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/turqoise_green"
    android:gravity="center|clip_vertical|center_horizontal"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/main_activity_iv_logo"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:layout_marginTop="50dp"
        android:contentDescription="@string/content_desc"
        app:srcCompat="@drawable/ic_baseline_filter_9_plus_72"
        tools:ignore="ImageContrastCheck" />

    <TextView
        android:id="@+id/main_activity_tv_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="30dp"
        android:fontFamily="@font/poppins_bold"
        android:hapticFeedbackEnabled="false"
        android:text="@string/placeholder_num"
        android:textAlignment="center"
        android:textColor="#637364"
        android:textSize="48sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/main_activity_et_number"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:layout_weight="2"
            android:ems="10"
            android:hint="@string/text_hint"
            android:importantForAutofill="no"
            android:inputType="numberSigned"
            android:minHeight="48dp"
            android:textColorHint="@color/helios_gray"
            tools:ignore="TextContrastCheck" />

        <Button
            android:id="@+id/main_activity_bt_submit"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:backgroundTint="@color/primary_green"
            android:text="@string/button_text"
            android:textColor="@color/white"
            tools:ignore="TextContrastCheck" />
    </LinearLayout>

    <Button
        android:id="@+id/main_activity_bt_random_number"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:backgroundTint="@color/primary_green"
        android:text="@string/random_button_text"
        android:textColor="@color/white"
        tools:ignore="TextContrastCheck" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/main_activity_bt_decrement"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:backgroundTint="@color/decrement_green"
            android:text="@string/decrement_text"
            tools:ignore="TextContrastCheck" />

        <EditText
            android:id="@+id/main_activity_et_interval"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:layout_weight="2"
            android:ems="10"
            android:hint="@string/placeholder_interval"
            android:importantForAutofill="no"
            android:inputType="numberSigned"
            android:minHeight="48dp"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textColorHint="@color/helios_gray"
            tools:ignore="TextContrastCheck" />

        <Button
            android:id="@+id/main_activity_bt_increment"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:backgroundTint="@color/increment_green"
            android:text="@string/incrment_text"
            tools:ignore="TextContrastCheck" />
    </LinearLayout>

    <TextView
        android:id="@+id/main_activity_tv_summary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/summary_placeholder"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="16sp" />

</LinearLayout>